{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 211,
  "lineage": "c0f665bc-3a9f-1da6-ebd8-41b3c30fee62",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tokyo-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:321233131123:internet-gateway/igw-03342296ccd41fe0c",
            "id": "igw-03342296ccd41fe0c",
            "owner_id": "321233131123",
            "tags": {
              "Name": "Tokyo Internet Gateway"
            },
            "tags_all": {
              "Name": "Tokyo Internet Gateway"
            },
            "vpc_id": "vpc-0200c33dadb78d59d"
          },
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "tokyo-backend-acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:321233131123:network-acl/acl-0f26e5a8477f970bd",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "id": "acl-0f26e5a8477f970bd",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "owner_id": "321233131123",
            "subnet_ids": [
              "subnet-016066eab0de3e006"
            ],
            "tags": {
              "Name": "Tokyo Private ACL"
            },
            "tags_all": {
              "Name": "Tokyo Private ACL"
            },
            "vpc_id": "vpc-0200c33dadb78d59d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.tokyo-backend-subnet",
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "tokyo-frontend-acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:321233131123:network-acl/acl-05f550366ad66472e",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "id": "acl-05f550366ad66472e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "owner_id": "321233131123",
            "subnet_ids": [
              "subnet-0bfa759f7746a4298"
            ],
            "tags": {
              "Name": "Tokyo Public ACL"
            },
            "tags_all": {
              "Name": "Tokyo Public ACL"
            },
            "vpc_id": "vpc-0200c33dadb78d59d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.tokyo-frontend-subnet",
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "tokyo-internet-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03342296ccd41fe0c",
            "id": "r-rtb-09ab945139387aeeb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09ab945139387aeeb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tokyo-igw",
            "aws_route_table.tokyo-public-route",
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tokyo-public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:321233131123:route-table/rtb-09ab945139387aeeb",
            "id": "rtb-09ab945139387aeeb",
            "owner_id": "321233131123",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03342296ccd41fe0c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Tokyo Public Route Table"
            },
            "tags_all": {
              "Name": "Tokyo Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0200c33dadb78d59d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tokyo-frontend-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba1770332a530dba",
            "route_table_id": "rtb-09ab945139387aeeb",
            "subnet_id": "subnet-0bfa759f7746a4298"
          },
          "dependencies": [
            "aws_route_table.tokyo-public-route",
            "aws_subnet.tokyo-frontend-subnet",
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tokyo-backend-securitygroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:321233131123:security-group/sg-08ebcda9ea3debcc8",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-08ebcda9ea3debcc8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "terraform-20231003154229648800000001",
            "name_prefix": "terraform-",
            "owner_id": "321233131123",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Tokyo Backend Security Group"
            },
            "tags_all": {
              "Name": "Tokyo Backend Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0200c33dadb78d59d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tokyo-frontend-securitygroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:321233131123:security-group/sg-00238345162de16ec",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-00238345162de16ec",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20231003154229659600000002",
            "name_prefix": "terraform-",
            "owner_id": "321233131123",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Tokyo Frontend Security Group"
            },
            "tags_all": {
              "Name": "Tokyo Frontend Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0200c33dadb78d59d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tokyo-backend-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:321233131123:subnet/subnet-04faccfb6cf1fcadb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04faccfb6cf1fcadb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "321233131123",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Tokyo-Backend-Subnet"
            },
            "tags_all": {
              "Name": "Tokyo-Backend-Subnet"
            },
            "vpc_id": "vpc-0200c33dadb78d59d"
          },
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tokyo-frontend-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:321233131123:subnet/subnet-0bfa759f7746a4298",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bfa759f7746a4298",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "321233131123",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Tokyo-Frontend-Subnet"
            },
            "tags_all": {
              "Name": "Tokyo-Frontend-Subnet"
            },
            "vpc_id": "vpc-0200c33dadb78d59d"
          },
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tokyo-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:321233131123:vpc/vpc-0200c33dadb78d59d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-083f293a0d507d40b",
            "default_route_table_id": "rtb-00c7be318b2ff480c",
            "default_security_group_id": "sg-06a7641d4a0c43080",
            "dhcp_options_id": "dopt-0a5a272b2bfd6217a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0200c33dadb78d59d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00c7be318b2ff480c",
            "owner_id": "321233131123",
            "tags": {
              "Name": "Tokyo Virtual Private Cloud"
            },
            "tags_all": {
              "Name": "Tokyo Virtual Private Cloud"
            }
          }
        }
      ]
    }
  ]
}